--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend_hack",
   "version": "1.0.0",
   "description": "Backend el hack 2023",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "text",
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
+    "openai": "^4.10.0",
     "path": "^0.12.7",
     "prisma": "^5.1.1",
     "stripe": "^12.8.0",
